# wechat-cli

./: Cargo.toml  LICENSE  README.md  SKILL.md
.github/workflows/: ci.yaml
src/: account.rs  api.rs  bot.rs  cli.rs  context.rs  errors.rs  main.rs  media.rs  send.rs  storage.rs  watch.rs
src/commands/: account.rs  get_context_token.rs  login.rs  mod.rs  qrcode.rs  send.rs  send_new.rs
src/wechat/: api.rs  media.rs  mod.rs  models.rs
tests/: send_auth_test.rs
