[package]
name = "wechat-cli"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "A CLI tool to interact with a Wechat iLink bot."
readme = "README.md"
license = "MIT"
repository = "https://github.com/systemxlabs/wechat-cli"
homepage = "https://github.com/systemxlabs/wechat-cli"
documentation = "https://docs.rs/wechat-cli"
keywords = ["wechat", "cli", "bot", "ilink", "im"]
categories = ["command-line-utilities"]

[dependencies]
aes = "0.8"
anyhow = "1"
base64 = "0.22"
block-padding = "0.3"
cipher = { version = "0.4", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
ecb = "0.1"
hex = "0.4"
mime_guess = "2"
md5 = "0.7"
qrcode = "0.14"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
